// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Apps 1`] = `
.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 134px;
}

.c7:active {
  opacity: 0.56;
}

.c7:hover,
.c7:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c7:active {
  opacity: 0.24;
}

.c7:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c4 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c5 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c1 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
}

.c1 > thead > tr > th,
.c1 > tbody > tr > th,
.c1 > tfoot > tr > th,
.c1 > thead > tr > td,
.c1 > tbody > tr > td,
.c1 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c1 > thead > tr > th:first-child,
.c1 > tbody > tr > th:first-child,
.c1 > tfoot > tr > th:first-child,
.c1 > thead > tr > td:first-child,
.c1 > tbody > tr > td:first-child,
.c1 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c1 > thead > tr > th:last-child,
.c1 > tbody > tr > th:last-child,
.c1 > tfoot > tr > th:last-child,
.c1 > thead > tr > td:last-child,
.c1 > tbody > tr > td:last-child,
.c1 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c1 > tbody > tr > td {
  vertical-align: middle;
}

.c1 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c1 > thead > tr > th .c3 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c1 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c1 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c1 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c6 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-right: 4px;
  cursor: pointer;
}

.c2 > tbody > tr > td {
  vertical-align: middle;
}

.c0 {
  box-sizing: border-box;
}

.c0.disabled {
  pointer-events: none;
  opacity: 0.5;
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1 c2"
    >
      <thead>
        <tr>
          <th>
            <a>
              Name
              <span
                class="c3 c4 icon icon-chevrons-expand-vertical "
                color="light"
                title="sort items"
              />
            </a>
          </th>
          <th>
            <a>
              Description
              <span
                class="c3 c4 icon icon-chevrons-expand-vertical "
                color="light"
                title="sort items"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Address
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            aws-console-1
          </td>
          <td>
            This is an AWS Console app
          </td>
          <td>
            https://
            awsconsole-1.teleport-proxy.com
          </td>
          <td>
            <div
              class="c5"
            >
              <div
                class="c6"
                kind="secondary"
              >
                aws_account_id: A1234
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c7"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render Databases 1`] = `
.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 134px;
}

.c7:active {
  opacity: 0.56;
}

.c7:hover,
.c7:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c7:active {
  opacity: 0.24;
}

.c7:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c4 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c5 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c1 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
}

.c1 > thead > tr > th,
.c1 > tbody > tr > th,
.c1 > tfoot > tr > th,
.c1 > thead > tr > td,
.c1 > tbody > tr > td,
.c1 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c1 > thead > tr > th:first-child,
.c1 > tbody > tr > th:first-child,
.c1 > tfoot > tr > th:first-child,
.c1 > thead > tr > td:first-child,
.c1 > tbody > tr > td:first-child,
.c1 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c1 > thead > tr > th:last-child,
.c1 > tbody > tr > th:last-child,
.c1 > tfoot > tr > th:last-child,
.c1 > thead > tr > td:last-child,
.c1 > tbody > tr > td:last-child,
.c1 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c1 > tbody > tr > td {
  vertical-align: middle;
}

.c1 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c1 > thead > tr > th .c3 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c1 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c1 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c1 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c6 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-right: 4px;
  cursor: pointer;
}

.c2 > tbody > tr > td {
  vertical-align: middle;
}

.c0 {
  box-sizing: border-box;
}

.c0.disabled {
  pointer-events: none;
  opacity: 0.5;
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1 c2"
    >
      <thead>
        <tr>
          <th>
            <a>
              Name
              <span
                class="c3 c4 icon icon-chevrons-expand-vertical "
                color="light"
                title="sort items"
              />
            </a>
          </th>
          <th>
            <a>
              Description
              <span
                class="c3 c4 icon icon-chevrons-expand-vertical "
                color="light"
                title="sort items"
              />
            </a>
          </th>
          <th>
            <a>
              Type
              <span
                class="c3 c4 icon icon-chevrons-expand-vertical "
                color="light"
                title="sort items"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            aurora
          </td>
          <td>
            PostgreSQL 11.6: AWS Aurora 
          </td>
          <td>
            RDS PostgreSQL
          </td>
          <td>
            <div
              class="c5"
            >
              <div
                class="c6"
                kind="secondary"
              >
                cluster: root
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c7"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render Desktops 1`] = `
.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 134px;
}

.c7:active {
  opacity: 0.56;
}

.c7:hover,
.c7:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c7:active {
  opacity: 0.24;
}

.c7:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c4 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c5 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c1 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
}

.c1 > thead > tr > th,
.c1 > tbody > tr > th,
.c1 > tfoot > tr > th,
.c1 > thead > tr > td,
.c1 > tbody > tr > td,
.c1 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c1 > thead > tr > th:first-child,
.c1 > tbody > tr > th:first-child,
.c1 > tfoot > tr > th:first-child,
.c1 > thead > tr > td:first-child,
.c1 > tbody > tr > td:first-child,
.c1 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c1 > thead > tr > th:last-child,
.c1 > tbody > tr > th:last-child,
.c1 > tfoot > tr > th:last-child,
.c1 > thead > tr > td:last-child,
.c1 > tbody > tr > td:last-child,
.c1 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c1 > tbody > tr > td {
  vertical-align: middle;
}

.c1 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c1 > thead > tr > th .c3 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c1 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c1 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c1 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c6 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-right: 4px;
  cursor: pointer;
}

.c2 > tbody > tr > td {
  vertical-align: middle;
}

.c0 {
  box-sizing: border-box;
}

.c0.disabled {
  pointer-events: none;
  opacity: 0.5;
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1 c2"
    >
      <thead>
        <tr>
          <th
            style="cursor: default;"
          >
            Address
          </th>
          <th>
            <a>
              Name
              <span
                class="c3 c4 icon icon-chevrons-expand-vertical "
                color="light"
                title="sort items"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            host.com
          </td>
          <td>
            bb8411a4-ba50-537c-89b3-226a00447bc6
          </td>
          <td>
            <div
              class="c5"
            >
              <div
                class="c6"
                kind="secondary"
              >
                foo: bar
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c7"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render Kubes 1`] = `
.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 134px;
}

.c7:active {
  opacity: 0.56;
}

.c7:hover,
.c7:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c7:active {
  opacity: 0.24;
}

.c7:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c4 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c5 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c1 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
}

.c1 > thead > tr > th,
.c1 > tbody > tr > th,
.c1 > tfoot > tr > th,
.c1 > thead > tr > td,
.c1 > tbody > tr > td,
.c1 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c1 > thead > tr > th:first-child,
.c1 > tbody > tr > th:first-child,
.c1 > tfoot > tr > th:first-child,
.c1 > thead > tr > td:first-child,
.c1 > tbody > tr > td:first-child,
.c1 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c1 > thead > tr > th:last-child,
.c1 > tbody > tr > th:last-child,
.c1 > tfoot > tr > th:last-child,
.c1 > thead > tr > td:last-child,
.c1 > tbody > tr > td:last-child,
.c1 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c1 > tbody > tr > td {
  vertical-align: middle;
}

.c1 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c1 > thead > tr > th .c3 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c1 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c1 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c1 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c6 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-right: 4px;
  cursor: pointer;
}

.c2 > tbody > tr > td {
  vertical-align: middle;
}

.c0 {
  box-sizing: border-box;
}

.c0.disabled {
  pointer-events: none;
  opacity: 0.5;
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1 c2"
    >
      <thead>
        <tr>
          <th>
            <a>
              Name
              <span
                class="c3 c4 icon icon-chevrons-expand-vertical "
                color="light"
                title="sort items"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            tele.logicoma.dev-prod
          </td>
          <td>
            <div
              class="c5"
            >
              <div
                class="c6"
                kind="secondary"
              >
                env: prod
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c7"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render Nodes 1`] = `
.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 134px;
}

.c7:active {
  opacity: 0.56;
}

.c7:hover,
.c7:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c7:active {
  opacity: 0.24;
}

.c7:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c4 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c5 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c1 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
}

.c1 > thead > tr > th,
.c1 > tbody > tr > th,
.c1 > tfoot > tr > th,
.c1 > thead > tr > td,
.c1 > tbody > tr > td,
.c1 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c1 > thead > tr > th:first-child,
.c1 > tbody > tr > th:first-child,
.c1 > tfoot > tr > th:first-child,
.c1 > thead > tr > td:first-child,
.c1 > tbody > tr > td:first-child,
.c1 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c1 > thead > tr > th:last-child,
.c1 > tbody > tr > th:last-child,
.c1 > tfoot > tr > th:last-child,
.c1 > thead > tr > td:last-child,
.c1 > tbody > tr > td:last-child,
.c1 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c1 > tbody > tr > td {
  vertical-align: middle;
}

.c1 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c1 > thead > tr > th .c3 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c1 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c1 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c1 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c6 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-right: 4px;
  cursor: pointer;
}

.c2 > tbody > tr > td {
  vertical-align: middle;
}

.c0 {
  box-sizing: border-box;
}

.c0.disabled {
  pointer-events: none;
  opacity: 0.5;
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1 c2"
    >
      <thead>
        <tr>
          <th>
            <a>
              Hostname
              <span
                class="c3 c4 icon icon-chevrons-expand-vertical "
                color="light"
                title="sort items"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Address
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            fujedu
          </td>
          <td>
            172.10.1.20:3022
          </td>
          <td>
            <div
              class="c5"
            >
              <div
                class="c6"
                kind="secondary"
              >
                cluster: one
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c7"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render Roles 1`] = `
.c5 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 134px;
}

.c5:active {
  opacity: 0.56;
}

.c5:hover,
.c5:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c5:active {
  opacity: 0.24;
}

.c5:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c4 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c1 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
}

.c1 > thead > tr > th,
.c1 > tbody > tr > th,
.c1 > tfoot > tr > th,
.c1 > thead > tr > td,
.c1 > tbody > tr > td,
.c1 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c1 > thead > tr > th:first-child,
.c1 > tbody > tr > th:first-child,
.c1 > tfoot > tr > th:first-child,
.c1 > thead > tr > td:first-child,
.c1 > tbody > tr > td:first-child,
.c1 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c1 > thead > tr > th:last-child,
.c1 > tbody > tr > th:last-child,
.c1 > tfoot > tr > th:last-child,
.c1 > thead > tr > td:last-child,
.c1 > tbody > tr > td:last-child,
.c1 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c1 > tbody > tr > td {
  vertical-align: middle;
}

.c1 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c1 > thead > tr > th .c3 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c1 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c1 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c1 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c2 > tbody > tr > td {
  vertical-align: middle;
}

.c0 {
  box-sizing: border-box;
}

.c0.disabled {
  pointer-events: none;
  opacity: 0.5;
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1 c2"
    >
      <thead>
        <tr>
          <th>
            <a>
              Role Name
              <span
                class="c3 c4 icon icon-chevron-up "
                color="light"
                title="sort items asc"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            role1
          </td>
          <td
            align="right"
          >
            <button
              class="c5"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
        <tr>
          <td>
            role2
          </td>
          <td
            align="right"
          >
            <button
              class="c5"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
